<resources>
    <string name="app_name">Zebra Developer Demo Card</string>
    <string name="error">Error</string>
    <string name="value_required_for_field">Value required for field %1$s</string>
    <string name="error_parsing_number_message">Error parsing number: %1$s</string>
    <string name="unable_to_overwrite_existing_file">Unable to overwrite existing file</string>
    <string name="retrieving_settings_ranges">Retrieving settings ranges&#8230;</string>
    <string name="error_retrieving_settings_ranges_message">Error retrieving settings ranges: %1$s</string>
    <string name="list_delimiter">,\u0020</string>
    <string name="no_printer_selected">No Printer Selected</string>
    <string name="no_printers_found">No Printers Found</string>
    <string name="disconnect_printer">Disconnect Printer</string>
    <string name="discover_printers">Discover Printers</string>
    <string name="discovered_printers">Discovered Printers</string>
    <string name="connecting_to_printer">Connecting to printer&#8230;</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="dialog_title_disconnect_printer">Disconnect Printer?</string>
    <string name="dialog_message_disconnect_printer">This will disconnect the current printer.</string>
    <string name="dialog_title_manually_connect">Manually Connect to Printer</string>
    <string name="printer_ip_address">Printer IP Address</string>
    <string name="no_printer_model_found">No printer model found</string>
    <string name="printer_model_not_supported">Printer model not supported</string>
    <string name="error_manually_connecting_message">Error manually connecting to printer: %1$s</string>
    <string name="error_discovering_printers_message">Error discovering printers: %1$s</string>
    <string name="unable_to_find_ip_address_input">Unable to find IP Address input</string>
    <string name="reconnecting_to_printer">Reconnecting to printer&#8230;</string>
    <string name="unable_to_communicate_with_printer_message">Unable to communicate with printer. Check your connection.</string>
    <string name="error_reconnecting_to_printer_message">Error reconnecting to printer: %1$s</string>
    <string name="error_updating_printer_status_message">Error updating printer status: %1$s</string>
    <string name="requesting_usb_permission">Requesting USB permission&#8230;</string>
    <string name="usb_permissions_denied_message">USB permissions denied. Please authorize USB permissions to be able to connect to a printer via USB.</string>
    <string name="job_status_log">Job Status Log</string>
    <string name="alarm_encountered">Alarm Encountered</string>
    <string name="alarm_encountered_message">Job ID %1$d encountered alarm [%2$s]. Either fix the alarm and click %3$s once the job begins again or click %4$s to cancel the job.</string>
    <string name="resume">Resume</string>
    <string name="polling_job_status">Polling status for job ID %1$d&#8230;</string>
    <string name="job_id_completed">Job ID %1$d completed.</string>
    <string name="job_id_completed_with_error_message">Job ID %1$d completed with error: %2$s</string>
    <string name="job_id_cancelled">Job ID %1$d cancelled.</string>
    <string name="job_id_cancelled_with_error_message">Job ID %1$d cancelled with error: %2$s</string>
    <string name="job_id_timed_out_message">Job ID %1$d timed out waiting for a card and was cancelled.</string>
    <string name="job_status_polling_cancelled">Job status polling cancelled.</string>
    <string name="job_status_message">Job ID %1$d: status:%2$s, position:%3$s, contact:%4$s, contactless:%5$s, alarm:%6$s, error:%7$s</string>
    <string name="error_polling_job_status_message">Error polling job status: %1$s</string>
    <string name="alarm_error_value_and_description">%1$d (%2$s)</string>
    <string name="settings_demo">Settings Demo</string>
    <string name="device">Device</string>
    <string name="print">Print</string>
    <string name="save_changes">Save Changes</string>
    <string name="no_settings_found">No settings found</string>
    <string name="refresh_settings">Refresh settings</string>
    <string name="refreshing_settings">Refreshing settings&#8230;</string>
    <string name="saving_settings">Saving settings&#8230;</string>
    <string name="error_retrieving_settings_message">Error retrieving settings: %1$s</string>
    <string name="error_saving_settings_message">Error saving settings: %1$s</string>
    <string name="settings_successfully_saved_message">Settings successfully saved. Refreshing settings&#8230;</string>
    <string name="network_reset_required">Network Reset Required</string>
    <string name="printer_reset_required">Printer Reset Required</string>
    <string name="continue_network_reset_message">Changing the following settings will require a network reset: %1$s. Do you want to continue?</string>
    <string name="continue_printer_reset_message">Changing the following settings will require a printer reset: %1$s. Do you want to continue?</string>
    <string name="network_reset_required_message">The following settings require a network reset to take effect: %1$s. Click %2$s to reset the network.</string>
    <string name="printer_reset_required_message">The following settings require a printer reset to take effect: %1$s. Click %2$s to reset the printer.</string>
    <string name="reset">Reset</string>
    <string name="printer_status_demo">Printer Status Demo</string>
    <string name="printer">Printer</string>
    <string name="general">General</string>
    <string name="media">Media</string>
    <string name="sensors">Sensors</string>
    <string name="refresh_printer_status">Refresh Printer Status</string>
    <string name="vendor">Vendor</string>
    <string name="model">Model</string>
    <string name="serial_number">Serial Number</string>
    <string name="mac_address">MAC Address</string>
    <string name="printhead_serial_number">Printhead Serial Number</string>
    <string name="oem_code">OEM Code</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="media_version">Media Version</string>
    <string name="heater_version">Heater Version</string>
    <string name="zmotif_version">ZMotif Version</string>
    <string name="status">Status</string>
    <string name="jobs_pending">Jobs Pending</string>
    <string name="jobs_active">Jobs Active</string>
    <string name="jobs_complete">Jobs Complete</string>
    <string name="job_errors">Job Errors</string>
    <string name="jobs_total">Jobs Total</string>
    <string name="next_job_id">Next Job ID</string>
    <string name="alarm_info">Alarm Info</string>
    <string name="error_info">Error Info</string>
    <string name="none">None</string>
    <string name="type">Type</string>
    <string name="initial_size">Initial Size</string>
    <string name="panels_remaining">Panels Remaining</string>
    <string name="description">Description</string>
    <string name="part_number">Part Number</string>
    <string name="mag_encode_demo">Mag Encode Demo</string>
    <string name="verify_encoding">Verify Encoding</string>
    <string name="reading_mag_encode_data">Reading mag encode data&#8230;</string>
    <string name="writing_mag_encode_data">Writing mag encode data&#8230;</string>
    <string name="insert_card">Insert Card</string>
    <string name="insert_card_into_atm_slot_message">Please insert a card into the ATM slot.</string>
    <string name="mag_encode_job">Mag Encode Job</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="coercivity_type">Coercivity Type</string>
    <string name="quantity">Quantity</string>
    <string name="track_1_data">Track 1 Data</string>
    <string name="track_2_data">Track 2 Data</string>
    <string name="track_3_data">Track 3 Data</string>
    <string name="error_reading_mag_encode_data_message">Error reading mag encode data: %1$s</string>
    <string name="error_writing_mag_encode_data_message">Error writing mag encode data: %1$s</string>
    <string name="mag_encode_job_sent_successfully">Mag encode job sent successfully</string>
    <string name="mag_encode_data_read_successfully">Mag encode data read successfully</string>
    <string name="no_data_read_from_card">No data read from card.</string>
    <string name="no_magnetic_track_data_to_encode">No magnetic track data to encode.</string>
    <string name="no_magnetic_encoder_found_error">Unable to proceed with demo because no magnetic encoder was found.</string>
    <string name="graphic_conversion_demo">Graphic Conversion Demo</string>
    <string name="source_graphic_file">Source Graphic File</string>
    <string name="converted_graphic_file">Converted Graphic File</string>
    <string name="graphics_format">Graphics Format</string>
    <string name="printer_model">Printer Model</string>
    <string name="dimension_options">Dimension Options</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="y_offset">Y-Offset</string>
    <string name="x_offset">X-Offset</string>
    <string name="pixels">pixels</string>
    <string name="log">Log</string>
    <string name="convert">Convert</string>
    <string name="note">Note</string>
    <string name="converted_graphic_file_location_message">The converted graphic file will be written as a BMP file to %1$s on your device.</string>
    <string name="select_graphic">Select Graphic</string>
    <string name="storage_permissions_granted">Storage permissions granted</string>
    <string name="storage_permissions_denied">Storage permissions denied</string>
    <string name="storage_permissions_request_enable_message">Storage permissions denied automatically due to \"Never ask again\" being enabled. Grant the permission in your device settings to proceed.</string>
    <string name="storage_error">Storage Error</string>
    <string name="storage_error_message">Unable to write to external storage; external storage unavailable.</string>
    <string name="unable_to_create_application_storage_directory">Unable to create application storage directory</string>
    <string name="keeping_current_image_dimensions_message">Keeping current image dimensions unless they exceed the maximum model-specific width and height&#8230;</string>
    <string name="min_width_message">Width must be positive. Setting width to 1&#8230;</string>
    <string name="min_height_message">Height must be positive. Setting height to 1&#8230;</string>
    <string name="width_greater_than_max_message">Specified width (%1$d) is greater than the maximum width (%2$d). Setting width to maximum width&#8230;</string>
    <string name="height_greater_than_max_message">Specified height (%1$d) is greater than the maximum height (%2$d). Setting height to maximum height&#8230;</string>
    <string name="resizing_image_message">Resizing image to %1$dx%2$d&#8230;</string>
    <string name="print_front_side">Print Front Side</string>
    <string name="front_side_graphic_file">Front Side Graphic File</string>
    <string name="back_side_graphic_file">Back Side Graphic File</string>
    <string name="print_optimization">Print Optimization</string>
    <string name="add_image">Add Image</string>
    <string name="print_back_side">Print Back Side</string>
    <string name="job_id">Job ID</string>
    <string name="job_status_1">Job Status 1</string>
    <string name="job_status_2">Job Status 2</string>
    <string name="job_status_3">Job Status 3</string>
    <string name="job_status_4">Job Status 4</string>
    <string name="not_started">Not started</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="cancel_all">Cancel All</string>
    <string name="magnetic_encode">Magnetic Encode</string>
    <string name="full_overlay">Full Overlay</string>
</resources>