<?xml version="1.0" encoding="utf-8"?>
<!--
    CONFIDENTIAL AND PROPRIETARY

    The source code and other information contained herein is the confidential and exclusive property of
    ZIH Corp. and is subject to the terms and conditions in your end user license agreement.
    This source code, and any other information contained herein, shall not be copied, reproduced, published,
    displayed or distributed, in whole or in part, in any medium, by any means, for any purpose except as
    expressly permitted under such license agreement.

    Copyright ZIH Corp. 2018

    ALL RIGHTS RESERVED
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.zebra.zebraui.ZebraSpinnerView
            android:id="@+id/multiJobSources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:zebraHeaderText="@string/source"
            app:zebraHasUnderline="false" />

        <com.zebra.zebraui.ZebraSpinnerView
            android:id="@+id/multiJobDestinations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:zebraHeaderText="@string/destination"
            app:zebraHasUnderline="false" />

        <com.zebra.zebraui.ZebraSpinnerView
            android:id="@+id/multiJobPrintOptimizationSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:zebraHeaderText="@string/print_optimization"
            app:zebraHasUnderline="false" />

        <com.zebra.zebraui.ZebraSpinnerView
            android:id="@+id/multiJobQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/quantities"
            app:zebraHeaderText="@string/quantity"
            app:zebraHasUnderline="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zebra_chevron_button_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/zebra_field_padding_horizontal"
                    android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                    android:text="@string/print_front_side"
                    android:textSize="@dimen/zebra_heading_text"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/printFrontSideSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                    android:checked="false" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/frontSideImageFileContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.zebra.zebraui.ZebraEditText
                    android:id="@+id/frontSideImageFileEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/zebra_chevron_button_icon_size"
                    android:inputType="none"
                    app:zebraHasUnderline="false"
                    app:zebraHeaderText="@string/front_side_graphic_file" />

                <ImageView
                    android:id="@+id/frontSideImageFileBrowseButton"
                    android:layout_width="@dimen/zebra_chevron_button_icon_size"
                    android:layout_height="@dimen/zebra_chevron_button_icon_size"
                    android:layout_marginRight="@dimen/zebra_edit_text_padding_horizontal"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_search" />

            </RelativeLayout>

            <com.zebra.zebraui.ZebraSpinnerView
                android:id="@+id/frontSideTypesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:zebraHeaderText="@string/type"
                app:zebraHasUnderline="false" />

            <LinearLayout
                android:id="@+id/frontSideFullOverlayContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zebra_chevron_button_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/zebra_field_padding_horizontal"
                    android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                    android:text="@string/full_overlay"
                    android:textSize="@dimen/zebra_heading_text"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/frontSideFullOverlaySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                    android:checked="false" />

            </LinearLayout>

            <com.zebra.zebraui.ZebraChevronButton
                android:id="@+id/addFrontSideImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                app:zebraChevronButtonIcon="@drawable/ic_add"
                app:zebraChevronVisibility="gone"
                app:zebraHasUnderline="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/backSideLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zebra_chevron_button_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/zebra_field_padding_horizontal"
                    android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                    android:text="@string/print_back_side"
                    android:textSize="@dimen/zebra_heading_text"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/printBackSideSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                    android:checked="false" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/backSideImageFileContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.zebra.zebraui.ZebraEditText
                    android:id="@+id/backSideImageFileEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/zebra_chevron_button_icon_size"
                    android:inputType="none"
                    app:zebraHasUnderline="false"
                    app:zebraHeaderText="@string/back_side_graphic_file" />

                <ImageView
                    android:id="@+id/backSideImageFileBrowseButton"
                    android:layout_width="@dimen/zebra_chevron_button_icon_size"
                    android:layout_height="@dimen/zebra_chevron_button_icon_size"
                    android:layout_marginRight="@dimen/zebra_edit_text_padding_horizontal"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_search" />

            </RelativeLayout>

            <com.zebra.zebraui.ZebraSpinnerView
                android:id="@+id/backSideTypesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:zebraHeaderText="@string/type"
                app:zebraHasUnderline="false" />

            <LinearLayout
                android:id="@+id/backSideFullOverlayContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zebra_chevron_button_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/zebra_field_padding_horizontal"
                    android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                    android:text="@string/full_overlay"
                    android:textSize="@dimen/zebra_heading_text"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/backSideFullOverlaySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                    android:checked="false" />

            </LinearLayout>

            <com.zebra.zebraui.ZebraChevronButton
                android:id="@+id/addBackSideImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                app:zebraChevronButtonIcon="@drawable/ic_add"
                app:zebraChevronVisibility="gone"
                app:zebraHasUnderline="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/magneticEncodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zebra_chevron_button_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/zebra_field_padding_horizontal"
                    android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                    android:text="@string/magnetic_encode"
                    android:textSize="@dimen/zebra_heading_text"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/magneticEncodeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                    android:checked="false" />

            </LinearLayout>

            <com.zebra.zebraui.ZebraSpinnerView
                android:id="@+id/multiJobCoercivityTypes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:zebraHeaderText="@string/coercivity_type"
                app:zebraHasUnderline="false" />

            <com.zebra.zebraui.ZebraEditText
                android:id="@+id/track1DataInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:zebraHeaderText="@string/track_1_data"
                app:zebraHasUnderline="false" />

            <com.zebra.zebraui.ZebraEditText
                android:id="@+id/track2DataInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:zebraHeaderText="@string/track_2_data"
                app:zebraHasUnderline="false" />

            <com.zebra.zebraui.ZebraEditText
                android:id="@+id/track3DataInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:zebraHeaderText="@string/track_3_data"
                app:zebraHasUnderline="false" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>